k8s/apps/spotizerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spotizerr
  namespace: spotizerr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Spotizerr"
    gethomepage.dev/description: "Spotify & Deezer downloader"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "spotify.png"
    gethomepage.dev/href: "https://spotizerr.item.fyi"
    gethomepage.dev/siteMonitor: "http://spotizerr.spotizerr.svc.cluster.local:7171"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=spotizerr"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`spotizerr.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: spotizerr
          port: 7171
  tls: {}
